Get hourly weather data and populate the container

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -129,6 +129,7 @@ body {
             flex-shrink: 0;
             font-size: small;
             width: 80px;
+            min-height: 115px;
             background: rgb(255 255 255 / 23%);
             padding: 10px;
             border-radius: 10px;
