--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -150,6 +150,20 @@ body {
 
 
 
+.menu {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: red;
+}
+
+
+
+
+
 /* ------Scrollbar stylizing------- */
 
 /* width */
@@ -160,13 +174,13 @@ body {
   
   /* Track */
   ::-webkit-scrollbar-track {
-    background: rgba(242, 242, 242, 0.129); 
+    background: rgb(0 0 0 / 27%);
     border-radius: 20px;
   }
    
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: #363636; 
+    background: #363636a3;
     border-radius: 20px;
   }
   
@@ -178,4 +192,4 @@ body {
 
 
 
-  
+ 
