--- a/src/css/--variables.scss
+++ b/src/css/--variables.scss
@@ -1,10 +1,10 @@
-$darkColor : #000000;
-$lightColor : #eeeeee;
+$darkColor : #111111;
+$lightColor : #cfcfcf;
 
 
 @mixin darkStyle {
     color: $lightColor;
-    background-color: rgb(16 19 29);
+    background-color: #10131d;
     background-image: radial-gradient(at 0% 0%, rgba(37, 118, 111, 0.288) 0, transparent 52%), radial-gradient(at 52% 20%, rgba(233, 30, 179, 0.116) 0, transparent 52%);
 }
 
