--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -160,9 +160,12 @@ body {
     left: 30%;
     width: 70%;
     height: 100%;
-    background: rgba(216, 216, 216, 0.369);
+    background: rgba(216,216,216,.369);
     padding: 20px;
+    padding-top: 60px;
     backdrop-filter: blur(20px);
+    transform: translateX(100%);
+    transition: transform .5s ease;
 
     .menu_option {
         border-radius: 5px;
@@ -268,6 +271,74 @@ body {
 
 
 
-
+.menu_btn_container {
+    width: 30px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 99;
+}
  
 
+
+
+  .menu_btn_container label{
+   display:flex;
+    flex-direction:column;
+    width:30px;
+    cursor:pointer;
+    z-index: 99;
+  }
+  
+  .menu_btn_container label span{
+    background: #252525;
+    border-radius:10px;
+    height:3px;
+    margin: 3px 0;
+    transition: .4s  cubic-bezier(0.68, -0.6, 0.32, 1.6);
+  
+  }
+  
+  
+  .menu_btn_container span:nth-of-type(1){
+    width:50%;
+    
+  }
+  
+  .menu_btn_container span:nth-of-type(2){
+    width:100%;
+  }
+  
+  
+  .menu_btn_container span:nth-of-type(3){
+    width:75%;
+   
+  }
+  
+  
+  .menu_btn_container input[type="checkbox"]{
+    display:none;
+  }
+  
+  
+  .menu_btn_container  input[type="checkbox"]:checked ~ span:nth-of-type(1){
+    transform-origin:bottom;
+    transform:rotatez(45deg) translate(3px,0px)
+  }
+  
+  
+  .menu_btn_container input[type="checkbox"]:checked ~ span:nth-of-type(2){
+    
+    transform-origin:top;
+    transform:rotatez(-45deg)
+  }
+  
+  
+  .menu_btn_container input[type="checkbox"]:checked ~ span:nth-of-type(3){
+    
+    transform-origin:bottom;
+    width:50%;
+    transform: translate(13px, -4px) rotatez(45deg)
+  
+  }
+  
