--- a/src/css/--variables.scss
+++ b/src/css/--variables.scss
@@ -1,14 +1,42 @@
-$darkColor : #111111;
-$lightColor : #cfcfcf;
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+ 
+
+/*----Font-----*/
+$font-family: 'Inter', sans-serif;
+
+
+/*--------Color--------*/
+
+$darkColor : #10131d;
+$lightColor : #eee;
+
+
+html {
+    --main-bg-color: #fff;
+    --main-text-color: #10131d;
+    --hover-color: rgba(16, 19, 29, 0.158);
+    --shadow : rgba(16, 19, 29, 0.336);
+}
+
+html[data-theme="dark"]{
+    --main-bg-color: #10131d;
+    --main-text-color: #eee;
+    --hover-color: rgba(238, 238, 238, 0.100);
+
+
+}
+
+
+
 
 
 @mixin darkStyle {
-    color: $lightColor;
-    background-color: #10131d;
+    background-color: var(--main-bg-color);
     background-image: radial-gradient(at 0% 0%, rgba(37, 118, 111, 0.288) 0, transparent 52%), radial-gradient(at 52% 20%, rgba(233, 30, 179, 0.116) 0, transparent 52%);
 }
 
 @mixin lightStyle {
-    background-color: rgb(255, 255, 255);
+    background-color: var(--main-bg-color);
     background-image: radial-gradient(at 0% 0%, rgb(37 118 111 / 32%) 0, transparent 52%), radial-gradient(at 52% 20%, rgba(233, 30, 179, 0.116) 0, transparent 52%);
 }
