--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -36,6 +36,9 @@ html[data-theme="dark"] {
         background: var(--hover-color);
         border: 1px solid rgba(209, 209, 209, 0.281);
     }
+    .change_location_modal {
+        background: rgba( 16, 19, 29, 0.7 );
+    }
 }
 
 
@@ -166,16 +169,19 @@ body {
 
 
 .menu {
+    background: rgba(255, 255, 255, 0.726);
+    box-shadow: 0 8px 32px 0 var(--shadow);
+    backdrop-filter: blur( 7px );
+    -webkit-backdrop-filter: blur( 7px );
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
     display: block;
     position: absolute;
     top: 0;
     left: 30%;
     width: 70%;
     height: 100%;
-    background: rgba(216,216,216,.369);
     padding: 20px;
     padding-top: 60px;
-    backdrop-filter: blur(20px);
     transform: translateX(100%);
     transition: transform .5s ease;
 
@@ -319,14 +325,18 @@ body {
 }
  
 .change_location_modal {
+    background: rgba(255, 255, 255, 0.726);
+    box-shadow: 0 8px 32px 0 var(--shadow);
+    backdrop-filter: blur( 7px );
+    -webkit-backdrop-filter: blur( 7px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
     position: absolute;
     top: 5%;
     left: 0;
     width: 90%;
     height: 90%;
     transform: translateX(5%);
-    background: var(--main-bg-color);
-    border-radius: 10px;
     z-index: 199;
 
     .wrapper {
@@ -414,7 +424,8 @@ body {
         }
 
         svg {
-            width: 15px;
+            width: 10px;
+            fill : var(--main-text-color)
         }
     }
 }
