--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -325,6 +325,7 @@ body {
 }
  
 .change_location_modal {
+    display: none;
     background: rgba(255, 255, 255, 0.726);
     box-shadow: 0 8px 32px 0 var(--shadow);
     backdrop-filter: blur( 7px );
