Edit index.html : Update .saved_location_list element

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -419,6 +419,11 @@ body {
             }
         }
     }
+
+    .no_location_saved_text {
+        padding-left: 15px;
+    }
+
     .location_infos span {
         display: block;
 
