Edit startWeatherApp & fetchWeatherData : Fix isuue on getting active location

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -403,7 +403,7 @@ body {
         &:hover {
             background: var(--hover-color);
         }
-        &:has(input:checked) {
+        &:has(input[checked=true]) {
             background: var(--hover-color);
 
             button.delete_location {
