--- a/src/css/--variables.scss
+++ b/src/css/--variables.scss
@@ -57,3 +57,16 @@ html[data-theme="dark"]{
         background: var(--hover-color);
     }
 }
+
+@mixin fullPageAbsolute{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+}
