--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -39,7 +39,9 @@ html[data-theme="dark"] {
     .change_location_modal {
         background: rgba( 16, 19, 29, 0.7 );
     }
-    .no_internet_page{
+    .no_internet_page,
+    .loader_container
+    {
         @include darkStyle;
     }
 }
@@ -439,6 +441,7 @@ body {
             font-size: small;
         }
     }
+
     button.delete_location {
         @include closeBtn;
 
@@ -449,21 +452,40 @@ body {
     }
 }
 
+/*---------- Loader-------------*/
+.loader_container {
+    @include lightStyle;
+    @include fullPageAbsolute;
+
+    .loader {
+        width: 48px;
+        height: 48px;
+        border: 5px dotted var(--main-text-color);
+        border-radius: 50%;
+        display: inline-block;
+        position: relative;
+        box-sizing: border-box;
+        animation: rotation 2s linear infinite;
+      }
+      
+      @keyframes rotation {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      } 
+          
+}
+
+
 
 /*---------No intenet section --------*/
 .no_internet_page {
-    visibility: hidden;
     @include lightStyle;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    z-index: 9999;
+    @include fullPageAbsolute;
+    visibility: hidden;
 
     .no_internet_text {
         text-align: center;
